.build_status/error.log
/opt/devkitpro/devkitPPC/bin/powerpc-eabi-gcc -O2 -Wall -mcpu=750 -meabi -mhard-float -ffunction-sections -fdata-sections -I/opt/devkitpro/wut/include -I/opt/devkitpro/portlibs/wiiu/include -I/opt/devkitpro/portlibs/wiiu/include/SDL2 -I/opt/devkitpro/portlibs/ppc/include/freetype2 -I/opt/devkitpro/portlibs/ppc/include -Ivendor/minizip -Iwave_browser -Iwave_browser/tv_remotes -DUSE_FILE32API -c "vendor/minizip/ioapi.c" -o "build/vendor/minizip/ioapi.o"
/opt/devkitpro/devkitPPC/bin/powerpc-eabi-gcc -O2 -Wall -mcpu=750 -meabi -mhard-float -ffunction-sections -fdata-sections -I/opt/devkitpro/wut/include -I/opt/devkitpro/portlibs/wiiu/include -I/opt/devkitpro/portlibs/wiiu/include/SDL2 -I/opt/devkitpro/portlibs/ppc/include/freetype2 -I/opt/devkitpro/portlibs/ppc/include -Ivendor/minizip -Iwave_browser -Iwave_browser/tv_remotes -DUSE_FILE32API -c "vendor/minizip/unzip.c" -o "build/vendor/minizip/unzip.o"
/opt/devkitpro/devkitPPC/bin/powerpc-eabi-g++ -O2 -Wall -mcpu=750 -meabi -mhard-float -ffunction-sections -fdata-sections -I/opt/devkitpro/wut/include -I/opt/devkitpro/portlibs/wiiu/include -I/opt/devkitpro/portlibs/wiiu/include/SDL2 -I/opt/devkitpro/portlibs/ppc/include/freetype2 -I/opt/devkitpro/portlibs/ppc/include -Ivendor/minizip -Iwave_browser -Iwave_browser/tv_remotes -std=c++17 -fno-exceptions -fno-rtti -c "wave_browser/settings.cpp" -o "build/wave_browser/settings.o"
/opt/devkitpro/devkitPPC/bin/powerpc-eabi-g++ -O2 -Wall -mcpu=750 -meabi -mhard-float -ffunction-sections -fdata-sections -I/opt/devkitpro/wut/include -I/opt/devkitpro/portlibs/wiiu/include -I/opt/devkitpro/portlibs/wiiu/include/SDL2 -I/opt/devkitpro/portlibs/ppc/include/freetype2 -I/opt/devkitpro/portlibs/ppc/include -Ivendor/minizip -Iwave_browser -Iwave_browser/tv_remotes -std=c++17 -fno-exceptions -fno-rtti -c "wave_browser/main.cpp" -o "build/wave_browser/main.o"
/opt/devkitpro/devkitPPC/bin/powerpc-eabi-g++ -O2 -Wall -mcpu=750 -meabi -mhard-float -ffunction-sections -fdata-sections -I/opt/devkitpro/wut/include -I/opt/devkitpro/portlibs/wiiu/include -I/opt/devkitpro/portlibs/wiiu/include/SDL2 -I/opt/devkitpro/portlibs/ppc/include/freetype2 -I/opt/devkitpro/portlibs/ppc/include -Ivendor/minizip -Iwave_browser -Iwave_browser/tv_remotes -std=c++17 -fno-exceptions -fno-rtti -c "wave_browser/tv_remotes/tv_remote.cpp" -o "build/wave_browser/tv_remotes/tv_remote.o"
/opt/devkitpro/devkitPPC/bin/powerpc-eabi-g++ -O2 -Wall -mcpu=750 -meabi -mhard-float -ffunction-sections -fdata-sections -I/opt/devkitpro/wut/include -I/opt/devkitpro/portlibs/wiiu/include -I/opt/devkitpro/portlibs/wiiu/include/SDL2 -I/opt/devkitpro/portlibs/ppc/include/freetype2 -I/opt/devkitpro/portlibs/ppc/include -Ivendor/minizip -Iwave_browser -Iwave_browser/tv_remotes -std=c++17 -fno-exceptions -fno-rtti -c "wave_browser/tv_remotes/model_registry.cpp" -o "build/wave_browser/tv_remotes/model_registry.o"
/opt/devkitpro/devkitPPC/bin/powerpc-eabi-g++ -O2 -Wall -mcpu=750 -meabi -mhard-float -ffunction-sections -fdata-sections -I/opt/devkitpro/wut/include -I/opt/devkitpro/portlibs/wiiu/include -I/opt/devkitpro/portlibs/wiiu/include/SDL2 -I/opt/devkitpro/portlibs/ppc/include/freetype2 -I/opt/devkitpro/portlibs/ppc/include -Ivendor/minizip -Iwave_browser -Iwave_browser/tv_remotes -std=c++17 -fno-exceptions -fno-rtti -c "wave_browser/tv_remotes/tv_detect.cpp" -o "build/wave_browser/tv_remotes/tv_detect.o"
/opt/devkitpro/devkitPPC/bin/powerpc-eabi-g++ -O2 -Wall -mcpu=750 -meabi -mhard-float -ffunction-sections -fdata-sections -I/opt/devkitpro/wut/include -I/opt/devkitpro/portlibs/wiiu/include -I/opt/devkitpro/portlibs/wiiu/include/SDL2 -I/opt/devkitpro/portlibs/ppc/include/freetype2 -I/opt/devkitpro/portlibs/ppc/include -Ivendor/minizip -Iwave_browser -Iwave_browser/tv_remotes -std=c++17 -fno-exceptions -fno-rtti -c "wave_browser/tv_remotes/sanyo/2013/DP55D44.cpp" -o "build/wave_browser/tv_remotes/sanyo/2013/DP55D44.o"
/opt/devkitpro/devkitPPC/bin/powerpc-eabi-g++ -O2 -Wall -mcpu=750 -meabi -mhard-float -ffunction-sections -fdata-sections -I/opt/devkitpro/wut/include -I/opt/devkitpro/portlibs/wiiu/include -I/opt/devkitpro/portlibs/wiiu/include/SDL2 -I/opt/devkitpro/portlibs/ppc/include/freetype2 -I/opt/devkitpro/portlibs/ppc/include -Ivendor/minizip -Iwave_browser -Iwave_browser/tv_remotes -std=c++17 -fno-exceptions -fno-rtti -c "wave_browser/tv_remotes/sanyo/2015/DP50E44.cpp" -o "build/wave_browser/tv_remotes/sanyo/2015/DP50E44.o"
wave_browser/tv_remotes/tv_detect.cpp: In function 'int detect_thread(int, const char**)':
wave_browser/tv_remotes/tv_detect.cpp:54:9: error: 'OSSleepMilliseconds' was not declared in this scope; did you mean 'OSTicksToMilliseconds'?
   54 |         OSSleepMilliseconds(300);
      |         ^~~~~~~~~~~~~~~~~~~
      |         OSTicksToMilliseconds
wave_browser/tv_remotes/tv_detect.cpp:61:9: error: 'OSSleepMilliseconds' was not declared in this scope; did you mean 'OSTicksToMilliseconds'?
   61 |         OSSleepMilliseconds(300);
      |         ^~~~~~~~~~~~~~~~~~~
      |         OSTicksToMilliseconds
make: *** [Makefile:97: build/wave_browser/tv_remotes/tv_detect.o] Error 1
make: *** Waiting for unfinished jobs....
